ev-view-accessible: Clear the cached data when the current page or document is updated.

https://bugzilla.gnome.org/show_bug.cgi?id=704621